fix: Visibility in grouped peer reviews

--- a/src/app/cdk/panel/panel/panel.component.scss
+++ b/src/app/cdk/panel/panel/panel.component.scss
@@ -29,6 +29,10 @@
   flex-direction: row;
   align-items: center;
   word-break: break-word;
+
+  .error {
+    margin-inline-end: 8px;
+  }
 }
 
 .nested-panels {
